# DeepCellMap

./: LICENSE  README.md  pyproject.toml  requirements.txt
DeepCellMap_V2/code/: const.py  main.py  region_of_interest.py
DeepCellMap_V2/code/config/: base_config.py  dataset_covid_config.py  dataset_generated_rois_levelset_analysis.py  dataset_ihc_microglia_config.py  dataset_management.py  dataset_new_fluorescence.py  dataset_new_ihc.py  datasets_config.py  html_generation_config.py
DeepCellMap_V2/code/preprocessing/: filter.py  slide.py  tiles.py
DeepCellMap_V2/code/segmentation_classification/: classification.py  segmentation.py  train_classification_model.py  training_set_constitution.py
DeepCellMap_V2/code/stat_analysis/: colocalisation_analysis.py  dbscan_analysis.py  deep_cell_map.py  neighbours_analysis.py
DeepCellMap_V2/code/utils/: covid_config_stat_vis.py  display_statistics.py  util.py  util_cellpose.py  util_colors_drawing.py  util_fig_display.py  util_html.py
DeepCellMap_V2/notebooks/: DeepCellMap_1_image_preprocessing.ipynb  DeepCellMap_2_laboratory_Tissue_segmentation.ipynb  DeepCellMap_3_laboratory_Cell_segmentation.ipynb  DeepCellMap_4_cell_classification.ipynb  config_without_figures.json  features_metadata.csv  grabber.py
data/ihc_microglia_fetal_human_brain_database/: info_data.csv
demo/: DeepCellMap_application_small_ROI.ipynb
