[tool.poetry]
name = "deepcellmap"
version = "0.1.0"
description = ""
authors = ["Theo Perochon"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0" #"^3.9.7"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
simple-colors = "^0.1.5"
ipywidgets = "^8.1.1"
scikit-image = "^0.22.0"
cellpose = "^2.2.3"
rasterio = "^1.3.9"
shapely = "^2.0.2"
czifile = "^2019.7.2"
plotly = "^5.18.0"
scikit-learn = "^1.4.0"
openslide-python = "^1.3.1"
seaborn = "^0.13.1"
nbformat = "^5.9.2"
kaleido = "0.2.1"
keras = "^3.3.3"
tensorflow = "^2.16.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
